glue/soloud.cs


	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setPan(IntPtr aObjHandle, uint aVoiceHandle, float aPan);
	public void setPan(uint aVoiceHandle, float aPan)
	{
		Soloud_setPan(objhandle, aVoiceHandle, aPan);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setPanAbsolute(IntPtr aObjHandle, uint aVoiceHandle, float aLVolume, float aRVolume);
	public void setPanAbsolute(uint aVoiceHandle, float aLVolume, float aRVolume)
	{
		Soloud_setPanAbsolute(objhandle, aVoiceHandle, aLVolume, aRVolume);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setVolume(IntPtr aObjHandle, uint aVoiceHandle, float aVolume);
	public void setVolume(uint aVoiceHandle, float aVolume)
	{
		Soloud_setVolume(objhandle, aVoiceHandle, aVolume);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setDelaySamples(IntPtr aObjHandle, uint aVoiceHandle, uint aSamples);
	public void setDelaySamples(uint aVoiceHandle, uint aSamples)
	{
		Soloud_setDelaySamples(objhandle, aVoiceHandle, aSamples);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_fadeVolume(IntPtr aObjHandle, uint aVoiceHandle, float aTo, double aTime);
	public void fadeVolume(uint aVoiceHandle, float aTo, double aTime)
	{
		Soloud_fadeVolume(objhandle, aVoiceHandle, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_fadePan(IntPtr aObjHandle, uint aVoiceHandle, float aTo, double aTime);
	public void fadePan(uint aVoiceHandle, float aTo, double aTime)
	{
		Soloud_fadePan(objhandle, aVoiceHandle, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_fadeRelativePlaySpeed(IntPtr aObjHandle, uint aVoiceHandle, float aTo, double aTime);
	public void fadeRelativePlaySpeed(uint aVoiceHandle, float aTo, double aTime)
	{
		Soloud_fadeRelativePlaySpeed(objhandle, aVoiceHandle, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_fadeGlobalVolume(IntPtr aObjHandle, float aTo, double aTime);
	public void fadeGlobalVolume(float aTo, double aTime)
	{
		Soloud_fadeGlobalVolume(objhandle, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_schedulePause(IntPtr aObjHandle, uint aVoiceHandle, double aTime);
	public void schedulePause(uint aVoiceHandle, double aTime)
	{
		Soloud_schedulePause(objhandle, aVoiceHandle, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_scheduleStop(IntPtr aObjHandle, uint aVoiceHandle, double aTime);
	public void scheduleStop(uint aVoiceHandle, double aTime)
	{
		Soloud_scheduleStop(objhandle, aVoiceHandle, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_oscillateVolume(IntPtr aObjHandle, uint aVoiceHandle, float aFrom, float aTo, double aTime);
	public void oscillateVolume(uint aVoiceHandle, float aFrom, float aTo, double aTime)
	{
		Soloud_oscillateVolume(objhandle, aVoiceHandle, aFrom, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_oscillatePan(IntPtr aObjHandle, uint aVoiceHandle, float aFrom, float aTo, double aTime);
	public void oscillatePan(uint aVoiceHandle, float aFrom, float aTo, double aTime)
	{
		Soloud_oscillatePan(objhandle, aVoiceHandle, aFrom, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_oscillateRelativePlaySpeed(IntPtr aObjHandle, uint aVoiceHandle, float aFrom, float aTo, double aTime);
	public void oscillateRelativePlaySpeed(uint aVoiceHandle, float aFrom, float aTo, double aTime)
	{
		Soloud_oscillateRelativePlaySpeed(objhandle, aVoiceHandle, aFrom, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_oscillateGlobalVolume(IntPtr aObjHandle, float aFrom, float aTo, double aTime);
	public void oscillateGlobalVolume(float aFrom, float aTo, double aTime)
	{
		Soloud_oscillateGlobalVolume(objhandle, aFrom, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setGlobalFilter(IntPtr aObjHandle, uint aFilterId, IntPtr aFilter);
	public void setGlobalFilter(uint aFilterId, SoloudObject aFilter)
	{
		Soloud_setGlobalFilter(objhandle, aFilterId, aFilter.objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setVisualizationEnable(IntPtr aObjHandle, int aEnable);
	public void setVisualizationEnable(int aEnable)
	{
		Soloud_setVisualizationEnable(objhandle, aEnable);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Soloud_calcFFT(IntPtr aObjHandle);
	public float[] calcFFT()
	{
		float[] ret = new float[256];
		IntPtr p = Soloud_calcFFT(objhandle);

		byte[] buffer = new byte[4];
		for (int i = 0; i < ret.Length; ++i)
		{
			int f_bits = Marshal.ReadInt32(p, i * 4);
			buffer[0] = (byte)((f_bits >> 0) & 0xff);
			buffer[1] = (byte)((f_bits >> 8) & 0xff);
			buffer[2] = (byte)((f_bits >> 16) & 0xff);
			buffer[3] = (byte)((f_bits >> 24) & 0xff);
			ret[i] = BitConverter.ToSingle(buffer, 0);
		}
		return ret;
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Soloud_getWave(IntPtr aObjHandle);
	public float[] getWave()
	{
		float[] ret = new float[256];
		IntPtr p = Soloud_getWave(objhandle);

		byte[] buffer = new byte[4];
		for (int i = 0; i < ret.Length; ++i)
		{
			int f_bits = Marshal.ReadInt32(p, i * 4);
			buffer[0] = (byte)((f_bits >> 0) & 0xff);
			buffer[1] = (byte)((f_bits >> 8) & 0xff);
			buffer[2] = (byte)((f_bits >> 16) & 0xff);
			buffer[3] = (byte)((f_bits >> 24) & 0xff);
			ret[i] = BitConverter.ToSingle(buffer, 0);
		}
		return ret;
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_getLoopCount(IntPtr aObjHandle, uint aVoiceHandle);
	public uint getLoopCount(uint aVoiceHandle)
	{
		return Soloud_getLoopCount(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_createVoiceGroup(IntPtr aObjHandle);
	public uint createVoiceGroup()
	{
		return Soloud_createVoiceGroup(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_destroyVoiceGroup(IntPtr aObjHandle, uint aVoiceGroupHandle);
	public int destroyVoiceGroup(uint aVoiceGroupHandle)
	{
		return Soloud_destroyVoiceGroup(objhandle, aVoiceGroupHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_addVoiceToGroup(IntPtr aObjHandle, uint aVoiceGroupHandle, uint aVoiceHandle);
	public int addVoiceToGroup(uint aVoiceGroupHandle, uint aVoiceHandle)
	{
		return Soloud_addVoiceToGroup(objhandle, aVoiceGroupHandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_isVoiceGroup(IntPtr aObjHandle, uint aVoiceGroupHandle);
	public int isVoiceGroup(uint aVoiceGroupHandle)
	{
		return Soloud_isVoiceGroup(objhandle, aVoiceGroupHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_isVoiceGroupEmpty(IntPtr aObjHandle, uint aVoiceGroupHandle);
	public int isVoiceGroupEmpty(uint aVoiceGroupHandle)
	{
		return Soloud_isVoiceGroupEmpty(objhandle, aVoiceGroupHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_update3dAudio(IntPtr aObjHandle);
	public void update3dAudio()
	{
		Soloud_update3dAudio(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_set3dSoundSpeed(IntPtr aObjHandle, float aSpeed);
	public int set3dSoundSpeed(float aSpeed)
	{
		return Soloud_set3dSoundSpeed(objhandle, aSpeed);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_get3dSoundSpeed(IntPtr aObjHandle);
	public float get3dSoundSpeed()
	{
		return Soloud_get3dSoundSpeed(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dListenerParametersEx(IntPtr aObjHandle, float aPosX, float aPosY, float aPosZ, float aAtX, float aAtY, float aAtZ, float aUpX, float aUpY, float aUpZ, float aVelocityX, float aVelocityY, float aVelocityZ);
	public void set3dListenerParameters(float aPosX, float aPosY, float aPosZ, float aAtX, float aAtY, float aAtZ, float aUpX, float aUpY, float aUpZ, float aVelocityX = 0.0f, float aVelocityY = 0.0f, float aVelocityZ = 0.0f)
	{
		Soloud_set3dListenerParametersEx(objhandle, aPosX, aPosY, aPosZ, aAtX, aAtY, aAtZ, aUpX, aUpY, aUpZ, aVelocityX, aVelocityY, aVelocityZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dListenerPosition(IntPtr aObjHandle, float aPosX, float aPosY, float aPosZ);
	public void set3dListenerPosition(float aPosX, float aPosY, float aPosZ)
	{
		Soloud_set3dListenerPosition(objhandle, aPosX, aPosY, aPosZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dListenerAt(IntPtr aObjHandle, float aAtX, float aAtY, float aAtZ);
	public void set3dListenerAt(float aAtX, float aAtY, float aAtZ)
	{
		Soloud_set3dListenerAt(objhandle, aAtX, aAtY, aAtZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dListenerUp(IntPtr aObjHandle, float aUpX, float aUpY, float aUpZ);
	public void set3dListenerUp(float aUpX, float aUpY, float aUpZ)
	{
		Soloud_set3dListenerUp(objhandle, aUpX, aUpY, aUpZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dListenerVelocity(IntPtr aObjHandle, float aVelocityX, float aVelocityY, float aVelocityZ);
	public void set3dListenerVelocity(float aVelocityX, float aVelocityY, float aVelocityZ)
	{
		Soloud_set3dListenerVelocity(objhandle, aVelocityX, aVelocityY, aVelocityZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourceParametersEx(IntPtr aObjHandle, uint aVoiceHandle, float aPosX, float aPosY, float aPosZ, float aVelocityX, float aVelocityY, float aVelocityZ);
	public void set3dSourceParameters(uint aVoiceHandle, float aPosX, float aPosY, float aPosZ, float aVelocityX = 0.0f, float aVelocityY = 0.0f, float aVelocityZ = 0.0f)
	{
		Soloud_set3dSourceParametersEx(objhandle, aVoiceHandle, aPosX, aPosY, aPosZ, aVelocityX, aVelocityY, aVelocityZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourcePosition(IntPtr aObjHandle, uint aVoiceHandle, float aPosX, float aPosY, float aPosZ);
	public void set3dSourcePosition(uint aVoiceHandle, float aPosX, float aPosY, float aPosZ)
	{
		Soloud_set3dSourcePosition(objhandle, aVoiceHandle, aPosX, aPosY, aPosZ);
	}
